change9 - Site is done! STARTING json

--- a/conatctForm.html
+++ b/conatctForm.html
@@ -11,7 +11,7 @@
         <a href="index.html" id="logo"></a>
     </header>
     <nav id="topNav">
-        <ul>
+        <ul id="topNavCFormHover">
             <li><a href="#">שאלות ותשובות</a></li>
             <li><a href="conatctForm.html" id="orangeLi">צרו קשר</a></li>
             <li><a href="#">כתבו עלינו</a></li>
@@ -48,7 +48,6 @@
             </section>
         </section>
     </main>
-
     <aside id="asideContactForm">
         <section id="asideSearch">
             <form>
@@ -56,7 +55,7 @@
             </form>
         </section>
         <nav id="asideNavTop">
-            <ul>
+            <ul id="asideNavTopCFormHover">
                 <li><a href="content.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
@@ -64,7 +63,7 @@
             </ul>
         </nav>
         <nav id="asideNavCenter">
-            <ul>
+            <ul id="asideNavCenterCFormHover">
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
                 <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
                 <li class="asideNavCentedot"><a href="VacuumCookingMethodAarticle.html">בישול בואקום</a></li>
@@ -82,11 +81,11 @@
     <footer id="contentfooterContactForm">
         <section id="footerSection">
             <section id="footerSharing">
-                <img src="images/facebooklogo.png" class="footerSharingImg paddingleft" >
-                <img src="images/twitterlogo.png" class="footerSharingImg" >
-                <img src="images/youtubelogo.png" class="footerSharingImg" >
-                <img src="images/tapuzlogo.png" class="footerSharingImg" >
-                <img src="images/themarkercafelogo.png" class="footerSharingImg" >
+                <a href="https://www.facebook.com/FeinCook"><img src="images/facebooklogo.png" class="footerSharingImg paddingleft" ></a>
+                <a href="https://twitter.com/?lang=he"><img src="images/twitterlogo.png" class="footerSharingImg" ></a>
+                <a href="https://www.youtube.com/channel/UCRUO2fPRXEjs-xlpZxE8zUA"><img src="images/youtubelogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/tapuzlogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
                 <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
