--- a/content.html
+++ b/content.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>FienCook-Content</title>
+    <title>מאמרי מערכת</title>
     <link rel="stylesheet" href="includes/style.css">
 </head>
 <body>
@@ -10,7 +10,6 @@
     <header>
         <a href="index.html" id="logo"></a>
     </header>
-
     <nav id="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
@@ -24,7 +23,6 @@
         </ul>
     </nav>
     <div class="clear"></div>
-
     <main id="contentMain">
         <nav id="mainNav">
             <ul>
@@ -62,7 +60,6 @@
             </article>
         </section>
     </main>
-
     <aside id="contentAside">
         <section id="asideSearch">
             <form>
@@ -71,12 +68,12 @@
         </section>
         <nav id="asideNavTopContent">
             <ul>
-                <li id="greenFontTitle">מאמרי מערכת</li>
+                <li id="greenFontTitle"><a href="content.html">מאמרי מערכת</a></li>
                 <nav id="asideNavCenter1">
                     <ul>
-                        <li class="asideNavCentedot1"><a href="VacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
-                        <li class="asideNavCentedot1"><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
-                        <li class="asideNavCentedot1"><a href="#"> שם המאמר השלישי</a></li>
+                        <li><a href="VacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
+                        <li><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
+                        <li><a href="#"> שם המאמר השלישי</a></li>
                     </ul>
                 </nav>
                 <li><a href="#">סדנאות ואירועים</a></li>
@@ -103,11 +100,11 @@
     <footer id="contentFooter">
         <section id="footerSection">
             <section id="footerSharing">
-                <img src="images/facebooklogo.png" class="footerSharingImg paddingleft" >
-                <img src="images/twitterlogo.png" class="footerSharingImg" >
-                <img src="images/youtubelogo.png" class="footerSharingImg" >
-                <img src="images/tapuzlogo.png" class="footerSharingImg" >
-                <img src="images/themarkercafelogo.png" class="footerSharingImg" >
+                <a href="https://www.facebook.com/FeinCook"><img src="images/facebooklogo.png" class="footerSharingImg paddingleft" ></a>
+                <a href="https://twitter.com/?lang=he"><img src="images/twitterlogo.png" class="footerSharingImg" ></a>
+                <a href="https://www.youtube.com/channel/UCRUO2fPRXEjs-xlpZxE8zUA"><img src="images/youtubelogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/tapuzlogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
                 <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
