--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -14,17 +14,16 @@
     <nav id="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
-            <li class="navBorder"><a href="#">צרו קשר</a></li>
-            <li class="navBorder"><a href="#">כתבו עלינו</a></li>
-            <li class="navBorder"><a href="#">בלוג</a></li>
-            <li class="navBorder"><a href="#">פורום</a></li>
-            <li class="navBorder"><a href="fiencookHouse.html">בית פין קוק</a></li>
-            <li class="navBorder"><a href="#">יאיר פיינברג</a></li>
-            <li class="navBorder"><a href="index.html">עמוד הבית</a></li>
+            <li><a href="conatctForm.html">צרו קשר</a></li>
+            <li><a href="#">כתבו עלינו</a></li>
+            <li><a href="#">בלוג</a></li>
+            <li><a href="#">פורום</a></li>
+            <li><a href="fiencookHouse.html" id="greenBoldFienCook">בית פין קוק</a></li>
+            <li><a href="#">יאיר פיינברג</a></li>
+            <li><a href="index.html">עמוד הבית</a></li>
         </ul>
     </nav>
     <div class="clear"></div>
-
     <main id="contentMainFienCook">
         <nav id="mainNav">
             <ul>
@@ -63,7 +62,6 @@
             </section>
         </section>
     </main>
-
     <aside id="asideFiencook">
         <section id="asideSearch">
             <form>
@@ -81,8 +79,8 @@
         <nav id="asideNavCenter">
             <ul>
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
-                <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
-                <li class="asideNavCentedot"><a href="VacuumCookingMethodAarticle.html">בישול בואקום</a></li>
+                <li class="asideNavCentedot"><a href="#">התרמומיקס</a></li>
+                <li class="asideNavCentedot"><a href="#">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
         </nav>
@@ -97,11 +95,11 @@
     <footer id="contentfooterFienCook">
         <section id="footerSection">
             <section id="footerSharing">
-                <img src="images/facebooklogo.png" class="footerSharingImg paddingleft" >
-                <img src="images/twitterlogo.png" class="footerSharingImg" >
-                <img src="images/youtubelogo.png" class="footerSharingImg" >
-                <img src="images/tapuzlogo.png" class="footerSharingImg" >
-                <img src="images/themarkercafelogo.png" class="footerSharingImg" >
+                <a href="https://www.facebook.com/FeinCook"><img src="images/facebooklogo.png" class="footerSharingImg paddingleft" ></a>
+                <a href="https://twitter.com/?lang=he"><img src="images/twitterlogo.png" class="footerSharingImg" ></a>
+                <a href="https://www.youtube.com/channel/UCRUO2fPRXEjs-xlpZxE8zUA"><img src="images/youtubelogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/tapuzlogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
                 <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
