--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           <marquee id="tickerText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</marquee>
         <section id="slideshow">
             <section id="slideshowinner">
-
                 <section id="slideshowimg"><img src="images/slideshowimg.jpg"></section>
                 <section id="slideshowtext">
                     <h1 id="h1slideshow">פתרונות חכמים למטבח המודרני</h1>
@@ -95,7 +94,7 @@
         </section>
         <nav id="asideNavTop">
             <ul>
-                <li><a href="content.html">מאמרי מערכת</a></li>
+                <li><a href="VacuumCookingMethodAarticle.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html">מתכונים</a></li>
@@ -133,11 +132,11 @@
     <footer>
         <section id="footerSection">
             <section id="footerSharing">
-                <img src="images/facebooklogo.png" class="footerSharingImg paddingleft" >
-                <img src="images/twitterlogo.png" class="footerSharingImg" >
-                <img src="images/youtubelogo.png" class="footerSharingImg" >
-                <img src="images/tapuzlogo.png" class="footerSharingImg" >
-                <img src="images/themarkercafelogo.png" class="footerSharingImg" >
+                <a href="https://www.facebook.com/FeinCook"><img src="images/facebooklogo.png" class="footerSharingImg paddingleft" ></a>
+                <a href="https://twitter.com/?lang=he"><img src="images/twitterlogo.png" class="footerSharingImg" ></a>
+                <a href="https://www.youtube.com/channel/UCRUO2fPRXEjs-xlpZxE8zUA"><img src="images/youtubelogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/tapuzlogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
                 <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
@@ -146,13 +145,13 @@
         <nav id="footerNav">
             <ul>
                 <li><a href="#">צור קשר</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מפת האתר</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מוצרים</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מתכונים</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">בלוג דה מרקר</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="content.html">מאמרי מערכת</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="index.html">עמוד הבית</a></li>
+                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מפת האתר</a></li>
+                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מוצרים</a></li>
+                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
+                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="recipes.html">מתכונים</a></li>
+                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="http://www.themarker.com/">בלוג דה מרקר</a></li>
+                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="content.html">מאמרי מערכת</a></li>
+                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="index.html">עמוד הבית</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
