--- a/recipes.html
+++ b/recipes.html
@@ -11,7 +11,7 @@
         <a href="index.html" id="logo"></a>
     </header>
     <nav id="topNav">
-        <ul>
+        <ul id="topNavRecipeHover">
             <li><a href="#">שאלות ותשובות</a></li>
             <li><a href="conatctForm.html">צרו קשר</a></li>
             <li><a href="#">כתבו עלינו</a></li>
@@ -40,9 +40,9 @@
                     <span><a href="vodkaWatermellon.html" class="orange">"שאט וודקה ואבטיח" </a></span>ב"מתכונים לתרמומיקס". כמה פשוט ככה טעים. וגם מרענן! יש לנו גם מתכוני גולשים חדשים ומרגשים, וכולם מאוד פשוטים להכנה. תודה לכל מי ששלח לנו מתכון, המשיכו לשלוח לנו ולמלא לנו את מלאי המתכונים ואת הלב.
                 </p>
                 <section id="picRecipe">
-                    <img src="images/termomiksRecipe.jpg">
-                    <img src="images/fiencookRecipe.jpg">
-                    <img src="images/slidersRecipe.jpg">
+                    <a href="#"><img src="images/termomiksRecipe.jpg"></a>
+                    <a href="#"><img src="images/fiencookRecipe.jpg"></a>
+                    <a href="#"><img src="images/slidersRecipe.jpg"></a>
                 </section>
                 <div class="clear"></div>
                 <section id="h3recipetitle">
@@ -54,7 +54,6 @@
             </article>
         </section>
     </main>
-
     <aside id="recipeAside">
         <section id="asideSearch">
             <form>
@@ -69,13 +68,13 @@
                 <li><a href="recipes.html" class="orange">מתכונים</a></li>
             </ul>
             <ul id="ulLastChild">
-                <li>מתכונים לתרמומיקס</li>
-                <li>מתכונים לפיין-קוקר</li>
-                <li>מתכוני גולשים</li>
+                <li><a href="#"> מתכונים לתרמומיקס</a></li>
+                <li><a href="#"> מתכונים לפיין-קוקר</a></li>
+                <li><a href="#"> מתכוני גולשים</a></li>
             </ul>
         </nav>
         <nav id="asideNavCenter">
-            <ul>
+            <ul id="asideNavCenterHover">
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
                 <li class="asideNavCentedot"><a href="#">התרמומיקס</a></li>
                 <li class="asideNavCentedot"><a href="#">בישול בואקום</a></li>
@@ -93,11 +92,11 @@
     <footer id="contentfooterRecipes">
         <section id="footerSection">
             <section id="footerSharing">
-                <img src="images/facebooklogo.png" class="footerSharingImg paddingleft" >
-                <img src="images/twitterlogo.png" class="footerSharingImg" >
-                <img src="images/youtubelogo.png" class="footerSharingImg" >
-                <img src="images/tapuzlogo.png" class="footerSharingImg" >
-                <img src="images/themarkercafelogo.png" class="footerSharingImg" >
+                <a href="https://www.facebook.com/FeinCook"><img src="images/facebooklogo.png" class="footerSharingImg paddingleft" ></a>
+                <a href="https://twitter.com/?lang=he"><img src="images/twitterlogo.png" class="footerSharingImg" ></a>
+                <a href="https://www.youtube.com/channel/UCRUO2fPRXEjs-xlpZxE8zUA"><img src="images/youtubelogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/tapuzlogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
                 <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
