--- a/VacuumCookingMethodAarticle.html
+++ b/VacuumCookingMethodAarticle.html
@@ -57,7 +57,6 @@
             </article>
         </section>
     </main>
-
     <aside id="contentAside">
         <section id="asideSearch">
             <form>
@@ -66,7 +65,7 @@
         </section>
         <nav id="asideNavTopContent">
             <ul>
-                <li id="greenFontTitle">מאמרי מערכת</li>
+                <li id="greenFontTitle"><a href="content.html">מאמרי מערכת</a></li>
                 <nav id="asideNavCenter1">
                     <ul>
                         <li class="currentArticleGreen"><a href="VacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
@@ -98,11 +97,11 @@
     <footer id="contentfooterVaccum">
         <section id="footerSection">
             <section id="footerSharing">
-                <img src="images/facebooklogo.png" class="footerSharingImg paddingleft" >
-                <img src="images/twitterlogo.png" class="footerSharingImg" >
-                <img src="images/youtubelogo.png" class="footerSharingImg" >
-                <img src="images/tapuzlogo.png" class="footerSharingImg" >
-                <img src="images/themarkercafelogo.png" class="footerSharingImg" >
+                <a href="https://www.facebook.com/FeinCook"><img src="images/facebooklogo.png" class="footerSharingImg paddingleft" ></a>
+                <a href="https://twitter.com/?lang=he"><img src="images/twitterlogo.png" class="footerSharingImg" ></a>
+                <a href="https://www.youtube.com/channel/UCRUO2fPRXEjs-xlpZxE8zUA"><img src="images/youtubelogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/tapuzlogo.png" class="footerSharingImg" ></a>
+                <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
                 <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
