change9.1 - json is done + starting JS

--- a/conatctForm.html
+++ b/conatctForm.html
@@ -28,7 +28,7 @@
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/yellowArrow.jpg" id="brownArrowImg"></li>
-                <li><a href="content.html">צור קשר</a></li>
+                <li><a href="systemArticles.html">צור קשר</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
@@ -56,7 +56,7 @@
         </section>
         <nav id="asideNavTop">
             <ul id="asideNavTopCFormHover">
-                <li><a href="content.html">מאמרי מערכת</a></li>
+                <li><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html">מתכונים</a></li>
@@ -66,7 +66,7 @@
             <ul id="asideNavCenterCFormHover">
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
                 <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
-                <li class="asideNavCentedot"><a href="VacuumCookingMethodAarticle.html">בישול בואקום</a></li>
+                <li class="asideNavCentedot"><a href="vacuumCookingMethodAarticle.html">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
         </nav>
@@ -99,7 +99,7 @@
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מתכונים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">בלוג דה מרקר</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="content.html">מאמרי מערכת</a></li>
+                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="index.html">עמוד הבית</a></li>
             </ul>
         </nav>
