--- a/systemArticles.html
+++ b/systemArticles.html
@@ -28,7 +28,7 @@
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/greenArrow1.png" id="greenArrowImg"></li>
-                <li class="mainNavLastLi"><a href="content.html">מאמרי מערכת</a></li>
+                <li class="mainNavLastLi"><a href="systemArticles.html">מאמרי מערכת</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
@@ -39,7 +39,7 @@
                 <p>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
-                <p class="nextArticle"><a href="VacuumCookingMethodAarticle.html">למאמר המלא</a></p>
+                <p class="nextArticle"><a href="vacuumCookingMethodAarticle.html">למאמר המלא</a></p>
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
             <article id="articleContentStyle2">
@@ -68,10 +68,10 @@
         </section>
         <nav id="asideNavTopContent">
             <ul>
-                <li id="greenFontTitle"><a href="content.html">מאמרי מערכת</a></li>
+                <li id="greenFontTitle"><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <nav id="asideNavCenter1">
                     <ul>
-                        <li><a href="VacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
+                        <li><a href="vacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
                         <li><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
                         <li><a href="#"> שם המאמר השלישי</a></li>
                     </ul>
@@ -118,7 +118,7 @@
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מתכונים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">בלוג דה מרקר</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="content.html">מאמרי מערכת</a></li>
+                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="index.html">עמוד הבית</a></li>
             </ul>
         </nav>
