--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>שאט וודקה אבטיח</title>
     <link rel="stylesheet" href="includes/style.css">
+    <script src="includes/jquery-2.1.1.min.js"></script>
+    <script src="includes/scripts.js"></script>
 </head>
+
 <body>
 <div id="vodkaWatermellonWrapper">
     <header>
@@ -35,14 +38,11 @@
         </nav>
         <div class="clear"></div>
         <section id="contentArticle">
-
             <h2 id="articleHeader">מתכונים</h2>
             <article id="vodkaWMAarticleStyle">
-
                 <h1>שאט וודקה ואבטיח</h1>
                 <img src="images/vodkaWatermellon.jpg" id="vodkaWatermellonImg">
                 <p id="vodkaWMAarticleStylePara">שאט וודקה אבטיח הוא משקה מושלם לערב שרבי. הוודקה תתן לכם את מלוא כובד האלהוכהול, והאבטיח עם המנטה את הקלילות של הקיץ. לחיים!</p>
-
                 <section id="vodkaWMAarticleStyleRecipes">
                     <p>החומרים</p>
                     <p> 100 גרם סוכר</p>
@@ -91,7 +91,7 @@
         </section>
         <nav id="asideNavTopContentvodkaWatermellon">
             <ul>
-                <li><a href="content.html">מאמרי מערכת</a></li>
+                <li><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html" class="orange">מתכונים</a></li>
@@ -148,7 +148,7 @@
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מתכונים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">בלוג דה מרקר</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="content.html">מאמרי מערכת</a></li>
+                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="index.html">עמוד הבית</a></li>
             </ul>
         </nav>
