--- a/VacuumCookingMethodAarticle.html
+++ b/VacuumCookingMethodAarticle.html
@@ -28,9 +28,9 @@
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
-                <li><a href="content.html">מאמרי מערכת</a></li>
+                <li><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li><img src="images/greenArrow1.png" id="greenArrowImg"></li>
-                <li class="mainNavLastLiNotBold"><a href="VacuumCookingMethodAarticle.html">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a> </li>
+                <li class="mainNavLastLiNotBold"><a href="vacuumCookingMethodAarticle.html">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a> </li>
             </ul>
         </nav>
         <div class="clear"></div>
@@ -65,10 +65,10 @@
         </section>
         <nav id="asideNavTopContent">
             <ul>
-                <li id="greenFontTitle"><a href="content.html">מאמרי מערכת</a></li>
+                <li id="greenFontTitle"><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <nav id="asideNavCenter1">
                     <ul>
-                        <li class="currentArticleGreen"><a href="VacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
+                        <li class="currentArticleGreen"><a href="vacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
                         <li><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
                         <li><a href="#"> שם המאמר השלישי</a></li>
                     </ul>
@@ -115,7 +115,7 @@
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מתכונים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">בלוג דה מרקר</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="content.html">מאמרי מערכת</a></li>
+                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="index.html">עמוד הבית</a></li>
             </ul>
         </nav>
