--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </section>
         <nav id="asideNavTop">
             <ul>
-                <li><a href="VacuumCookingMethodAarticle.html">מאמרי מערכת</a></li>
+                <li><a href="vacuumCookingMethodAarticle.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html">מתכונים</a></li>
@@ -104,7 +104,7 @@
             <ul>
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
                 <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
-                <li class="asideNavCentedot"><a href="VacuumCookingMethodAarticle.html">בישול בואקום</a></li>
+                <li class="asideNavCentedot"><a href="vacuumCookingMethodAarticle.html">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
         </nav>
@@ -150,7 +150,7 @@
                 <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
                 <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="recipes.html">מתכונים</a></li>
                 <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="http://www.themarker.com/">בלוג דה מרקר</a></li>
-                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="content.html">מאמרי מערכת</a></li>
+                <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="index.html">עמוד הבית</a></li>
             </ul>
         </nav>
