--- a/recipes.html
+++ b/recipes.html
@@ -62,7 +62,7 @@
         </section>
         <nav id="asideNavTopContentRecipe">
             <ul>
-                <li><a href="content.html"> מאמרי מערכת</a></li>
+                <li><a href="systemArticles.html"> מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html" class="orange">מתכונים</a></li>
@@ -110,7 +110,7 @@
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מתכונים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">בלוג דה מרקר</a></li>
-                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="content.html">מאמרי מערכת</a></li>
+                <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="index.html">עמוד הבית</a></li>
             </ul>
         </nav>
